--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Michroma);
-/* normalize.css v2.1.3 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
